--- a/users/static/users/css/auth.css
+++ b/users/static/users/css/auth.css
@@ -1,11 +1,32 @@
-body { font-size: 62.5%; }
-label { display:block; }
+label {
+    display:block;
+}
+
 input.text {
     margin-bottom:12px;
     width: 50%;
     padding: .4em;
 }
-fieldset { padding:0; border:0; margin-top:25px; }
-h1 { font-size: 1.2em; margin: .6em 0; }
 
-.required_label:before { color: red; content: "* "; }
+fieldset {
+    padding: 0px;
+    border: 0px;
+    margin-top:25px;
+}
+
+.dialog {
+    display: none;
+}
+
+.required_label:after {
+    color: red;
+    content: "*";
+}
+
+.form_field_error {
+    white-space: nowrap;
+}
+
+.form_field_error img {
+    vertical-align: middle;
+}
