--- a/users/templates/settings/settings.html
+++ b/users/templates/settings/settings.html
@@ -13,6 +13,8 @@
     {% if user.is_authenticated %}
         <div class="content_block">
             <img src="{{ user.profile_pic.url }}" id="user_avatar"/>
+            <br />
+            <button id="show_profile_pics_button">Show Uploaded Profile Pictures</button>
         </div>
         <div class="content_block">
             <ul class="content_text">
@@ -22,42 +24,40 @@
             </ul>
         </div>
 
-        {% block body_main_2 %}
-            <div class="content_block">
-                <label for="new_avatar" class="content_title" style="text-align: left;">上傳新大頭貼</label>
-                <input type="file" name="user_avatar" id="new_avatar" />
-                <button id="new_avatar_button">上傳</button>
-            </div>
+        <div class="content_block">
+            <label for="new_avatar" class="content_title" style="text-align: left;">上傳新大頭貼</label>
+            <input type="file" name="user_avatar" id="new_avatar" />
+            <button id="new_avatar_button">上傳</button>
+        </div>
 
-            <div id="user_avatar_resize">
-                <img id="user_avatar_resize_img" />
-            </div>
+        <div id="user_avatar_resize">
+            <img id="user_avatar_resize_img" />
+        </div>
 
-            <div class="content_block">
-                <button id="change_password_button">更換密碼</button>
+        <div class="content_block">
+            <button id="change_password_button">更換密碼</button>
+        </div>
+        <form id="change_password_form" class="dialog">
+            {% csrf_token %}
+            <div>
+                <label for="password_old" class="required_label">舊密碼</label>
+                <input type="password" name="password_old" id="password_old" class="required_field text ui-widget-content ui-corner-all" />
+                <span id="password_old_error" class="form_field_error"></span>
             </div>
-            <form id="change_password_form" class="dialog">
-                {% csrf_token %}
-                <div>
-                    <label for="password_old" class="required_label">舊密碼</label>
-                    <input type="password" name="password_old" id="password_old" class="required_field text ui-widget-content ui-corner-all" />
-                    <span id="password_old_error" class="form_field_error"></span>
-                </div>
-                <br />
-                <div>
-                    <label for="password_new" class="required_label">新密碼</label>
-                    <input type="password" name="password_new" id="password_new" class="required_field text ui-widget-content ui-corner-all" />
-                    <span id="password_new_error" class="form_field_error"></span>
-                </div>
-                <br />
-                <div>
-                    <label class="required_label">確認新密碼</label>
-                    <input type="password" id="password_new_confirm" class="required_field text ui-widget-content ui-corner-all" />
-                    <span id="password_new_confirm_error" class="form_field_error"></span>
-                </div>
-                <br />
-            </form>
-        {% endblock body_main_2 %}
+            <br />
+            <div>
+                <label for="password_new" class="required_label">新密碼</label>
+                <input type="password" name="password_new" id="password_new" class="required_field text ui-widget-content ui-corner-all" />
+                <span id="password_new_error" class="form_field_error"></span>
+            </div>
+            <br />
+            <div>
+                <label class="required_label">確認新密碼</label>
+                <input type="password" id="password_new_confirm" class="required_field text ui-widget-content ui-corner-all" />
+                <span id="password_new_confirm_error" class="form_field_error"></span>
+            </div>
+            <br />
+        </form>
 
         {% if user.is_superuser %}
             <div class="content_block">
@@ -68,6 +68,7 @@
         <div class="content_block">尚未登入!</div>
     {% endif %}
 {% endblock body_main_1 %}
+
 {% block footer_javascript_section %}
     <script src="{% static 'util/js/jquery.Jcrop.min.js' %}"></script>
     <script src="{% static 'users/js/users.js' %}"></script>
