--- a/utils/static/util/css/main.css
+++ b/utils/static/util/css/main.css
@@ -68,17 +68,17 @@ html, body{
 	font-family: Microsoft JhengHei;
 	font-weight: normal;
     line-height: 26px;
-    text-align: center;    
+    text-align: center;
  	text-decoration: none;
 	color:#000;
-    cursor: pointer; 
+    cursor: pointer;
 }.login a:hover {
 	background-color: #FF9900;
-	color: #FFF;    
-    -webkit-transition: background .3s linear;  
-    -moz-transition: background .3s linear;  
-    -o-transition: background .3s linear;  
-    transition: background .3s linear;  
+	color: #FFF;
+    -webkit-transition: background .3s linear;
+    -moz-transition: background .3s linear;
+    -o-transition: background .3s linear;
+    transition: background .3s linear;
 }.login a:active {
 	position:relative;
 }
@@ -98,7 +98,7 @@ html, body{
 
 .logo_wrd {
     float:   left;
-	display: block; 
+	display: block;
     width:   250px;
     padding: 10px;
 }
@@ -134,13 +134,13 @@ nav {
 	width: 70px;
 	height: 15px;
     padding: 15px;
-    font-family: Microsoft JhengHei; 
+    font-family: Microsoft JhengHei;
 	font-size: 15px;
     color: #FFF;
     text-decoration: none;
-    cursor: pointer; 
+    cursor: pointer;
 }
- 
+
 .nav li a:hover {
     color: #000;
     background: #badaf6;
@@ -162,6 +162,10 @@ nav {
 
 /* Content */
 
+.dialog {
+    display:none;
+}
+
 #content{
     margin: 0 auto;
     width: 1024px;
@@ -178,7 +182,7 @@ nav {
     -moz-box-shadow: 0px 0px 2px rgba(20%,20%,40%,0.6), 0px 0px 6px rgba(20%,20%,40%,0.4), 0px 0px 12px rgba(20%,20%,40%,0.4);
     -webkit-box-shadow: 0px 0px 2px rgba(20%,20%,40%,0.6), 0px 0px 6px rgba(20%,20%,40%,0.4), 0px 0px 12px rgba(20%,20%,40%,0.4);
     box-shadow: 0px 0px 2px rgba(20%,20%,40%,0.6), 0px 0px 6px rgba(20%,20%,40%,0.4), 0px 0px 12px rgba(20%,20%,40%,0.4);
-    /* font-family: Microsoft JhengHei; */ 
+    /* font-family: Microsoft JhengHei; */
 	font-size: 15px;
     text-align:  left;
     line-height: 20px;
@@ -240,8 +244,8 @@ nav {
     display: inline-block;
 	width: 90px;
     margin: 12px;
-    text-align: center;    
-    font-family: Microsoft JhengHei; 
+    text-align: center;
+    font-family: Microsoft JhengHei;
 	font-size: 12px;
     color: #FFF;
     text-decoration: none;
@@ -251,8 +255,8 @@ nav {
 
 .copyright_line{
     display: block;
-    text-align: center;    
-    font-family: Arial, Microsoft JhengHei; 
+    text-align: center;
+    font-family: Arial, Microsoft JhengHei;
 	font-size: 12px;
     color: #FFFFFF;
     text-decoration: none;
