--- a/users/templates/settings/profile_pics.html
+++ b/users/templates/settings/profile_pics.html
@@ -8,8 +8,8 @@
     {% if user.is_authenticated %}
         {% for profile_pic in profile_pics %}
             <img
-                src="{{ profile_pic.profile_pic.url }}"
-                id="profile_pic_{{ profile_pic.profile_pic|filename_wo_ext }}"
+                src="{{ profile_pic.url }}"
+                id="profile_pic_{{ profile_pic.url|filename_wo_ext }}"
                 class="profile_pics profile_pic_candidates"
             />
             <!-- <div>{{ profile_pic.profile_pic|filename_wo_ext }}</div> -->
