--- a/wiki/templates/wiki/main.html
+++ b/wiki/templates/wiki/main.html
@@ -10,29 +10,31 @@
 {% block body_main_1 %}
     <div id="create_post" class="content_block">
     {% if user.is_authenticated %}
-        <button id="create_post_button">Create Post</button>
+        <button id="new_post_button">New Post</button>
     {% else %}
         尚未登入!
     {% endif %}
     </div>
 
-    <!-- #list_all_page is for testing -->
+    <!-- #list_all_page for testing -->
     <div id="list_all_posts" class="content_block">
-        {% if posts %}
-            {% for post in posts %}
-
-            {% endfor %}
-        {% else %}
-            There are currently no posts -- create one today!
-        {% endif %}
+    {% if posts %}
+        <ul>
+        {% for post in posts %}
+            <li><a href="#">{{ post.title }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        There are currently no posts -- create one today!
+    {% endif %}
     </div>
 {% endblock body_main_1 %}
 
 {% block footer_javascript_section %}
-    <script src="{% static 'wiki/js/posts.js' %}"></script>
+    <script src="{% static 'wiki/js/wiki.js' %}"></script>
     <script>
         $(document).ready(function() {
-            Posts.init();
+            Wiki.init();
         });
     </script>
 {% endblock footer_javascript_section %}
