--- a/apps/wiki/templates/wiki/new_page.html
+++ b/apps/wiki/templates/wiki/new_page.html
@@ -4,7 +4,6 @@
 {% block head_css_section %}
     <link href="{% static 'util/css/main.css' %}" rel="stylesheet">
     <link href="{% static 'wiki/css/wiki.css' %}" rel="stylesheet">
-
     <link href="{% static 'semantic/semantic.min.css' %}" rel="stylesheet">
 {% endblock head_css_section %}
 
@@ -50,13 +49,57 @@
                 Template Content
             </div>
             <div class="content">
+                <table class="ui compact celled definition table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Name</th>
+                            <th>Type</th>
+                            <th>Default Value</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id="" class="positive">
+                            <td class="collapsing">
+                                <div class="ui fitted slider
+                                            disabled checkbox">
+                                    <input type="checkbox"
+                                    checked="checked">
+                                </div>
+                            </td>
+                            <td>Title</td>
+                            <td>Text</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                    <tfoot class="full-width">
+                        <tr>
+                            <th>
+                                <div class="ui fitted slider
+                                            checkbox">
+                                    <input type="checkbox"
+                                    checked="checked">
+                                </div>
+                            </td>
+                            </th>
+                            <th colspan="3">
+<!--                                 <div class="ui right floated
+                                            small primary labeled
+                                            icon button">
+                                <i class="checkmark icon"></i>
+                                    Check All
+                                </div> -->
+                            </th>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
             <div class="actions">
                 <div class="ui negative button">
                     Discard
                 </div>
                 <div class="ui primary button">
-                    Proceed
+                    Next
                     <i class="ui right chevron icon"></i>
                 </div>
             </div>
