--- a/apps/wiki/templates/wiki/new_page.html
+++ b/apps/wiki/templates/wiki/new_page.html
@@ -75,11 +75,11 @@
                     <tfoot class="full-width">
                         <tr>
                             <th>
-                                <div class="ui fitted slider
+<!--                                 <div class="ui fitted slider
                                             checkbox">
                                     <input type="checkbox"
                                     checked="checked">
-                                </div>
+                                </div> -->
                             </td>
                             </th>
                             <th colspan="3">
