template CRUD: client side done

--- a/apps/wiki/templates/wiki/new_page.html
+++ b/apps/wiki/templates/wiki/new_page.html
@@ -88,9 +88,20 @@
                 </div>
             </div>
         </div>
-        <div class="ui confirm united modal save_template_as_modal">
-            <i class="close icon"></i>
+        <div class="ui template_title united modal save_template_as_modal">
+            <!-- <i class="close icon"></i> -->
+            <div class="header">
+                Template Title
+            </div>
             <div class="content">
+                <form id="template_title_form" class="ui form">
+                    <div>
+                        <div class="field">
+                            <label>Title</label>
+                            <input type="text" name="title" />
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="actions">
                 <div class="ui negative button">
