--- a/apps/wiki/templates/wiki/new_page.html
+++ b/apps/wiki/templates/wiki/new_page.html
@@ -98,7 +98,11 @@
                     <div>
                         <div class="field">
                             <label>Title</label>
-                            <input type="text" name="title" />
+                            <input type="text" id="template_title_value" />
+                        </div>
+                        <div class="field">
+                            <label>Description</label>
+                            <textarea id="template_description"></textarea>
                         </div>
                     </div>
                 </form>
