template CU done; R in progress

--- a/apps/wiki/templates/wiki/new_page.html
+++ b/apps/wiki/templates/wiki/new_page.html
@@ -23,8 +23,8 @@
             </form>
         </div>
 
-        <div class="ui main united modal save_template_as_modal">
-            <i class="close icon"></i>
+        <div class="ui main modal save_template_as_modal">
+            <!-- <i class="close icon"></i> -->
             <div class="header">
                 Template Content
             </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="ui edit united modal save_template_as_modal">
+        <div class="ui edit small long modal save_template_as_modal">
             <i class="close icon"></i>
             <div class="header">
                 Entry Editor
@@ -126,9 +126,6 @@
 {% block footer_javascript_section %}
     <!-- <script src="{% static 'util/js/jquery.Jcrop.min.js' %}"></script> -->
     <script src="{% static 'wiki/js/posts.js' %}"></script>
-    <script src="{% static 'semantic/semantic.min.js' %}"></script>
-    <script src="{% static 'react/react.js' %}"></script>
-    <script src="{% static 'react/JSXTransformer.js' %}"></script>
     <script type="text/jsx" src="{% static 'wiki/js/posts.jsx' %}"></script>
 
     <script>
