dynamic list lagging problem resolved

--- a/apps/wiki/templates/wiki/main.html
+++ b/apps/wiki/templates/wiki/main.html
@@ -157,8 +157,9 @@
   <script src="{% static 'wiki/js/wiki.js' %}"></script>
   <script src="{% static 'wiki/js/posts.js' %}"></script>
 
-  <script type="text/jsx" src="{% static 'wiki/js/wiki.jsx' %}"></script>
+  <!-- <script type="text/jsx" src="{% static 'wiki/js/wiki.jsx' %}"></script> -->
   <!-- <script type="text/jsx" src="{% static 'wiki/js/posts.jsx' %}"></script> -->
+  <script src="{% static 'wiki/js/wiki.react.js' %}"></script>
   <script src="{% static 'wiki/js/posts.react.js' %}"></script>
 
   <script>
