working on elimination of Posts.newPostEntries

--- a/apps/wiki/templates/wiki/main.html
+++ b/apps/wiki/templates/wiki/main.html
@@ -134,7 +134,8 @@
         <a class="item active" data-tab="new">New</a>
         <a class="item" data-tab="search">Search</a>
       </div>
-      <div class="ui bottom attached tab segment active" data-tab="new">
+      <div id="choice_modal_new"
+        class="ui bottom attached tab segment active" data-tab="new">
         NEW
       </div>
       <div class="ui bottom attached tab segment" data-tab="search">
