posts: choice field done

--- a/apps/wiki/static/wiki/css/wiki.css
+++ b/apps/wiki/static/wiki/css/wiki.css
@@ -17,3 +17,7 @@
 #template_modal_1_content td:first-of-type {
     white-space: nowrap;
 }
+
+#choice_modal_search div.selection {
+    margin: 10px;
+}
