post submit confirmation dialog

--- a/apps/wiki/templates/wiki/main.html
+++ b/apps/wiki/templates/wiki/main.html
@@ -152,13 +152,30 @@
       </div>
     </div>
   </div>
-
   <div class="ui search small long modal choice_modal">
     <i class="close icon"></i>
     <div class="header">
       Choices Searching
     </div>
     <div class="content" id="choice_modal_search">
+    </div>
+  </div>
+
+  <div class="ui modal post_content_modal">
+    <i class="close icon"></i>
+    <div class="header">
+      Post Content Confirmation
+    </div>
+    <div class="content" id="post_content_modal_content">
+    </div>
+    <div class="actions">
+      <div class="ui negative button">
+        Discard
+      </div>
+      <div class="ui primary button">
+        Submit
+        <i class="ui right chevron icon"></i>
+      </div>
     </div>
   </div>
 {% endblock body_main_1 %}
